alert z-index-fix

--- a/css/style.css
+++ b/css/style.css
@@ -608,8 +608,8 @@ img {
     padding-bottom: 7rem !important;
 }
 
-.z-index-130 {
-    z-index: 130;
+.z-index-1030 {
+    z-index: 1030;
 }
 
 .dropdown-toggle::after {
